Fixed the horizontal scrolling issue on Filters

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -10,7 +10,7 @@
     justify-content: space-between;
     top: 0;
     left: 0;
-    position: absolute;
+    position: fixed;
     background-color: rgb(10, 48, 63);
     z-index: 10;
 }
